Add font awesome

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./src/assets/img/logo.png" />
+    <link href="assets/font-awesome/css/fontawesome.min.css" rel="stylesheet" />
+    <link href="assets/font-awesome/css/solid.min.css" rel="stylesheet" />
     <title>Vite App</title>
   </head>
   <body>
